tests/baselines/reference/parserCastVersusArrowFunction1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.ts (13 errors) ====
    var v = <T>() => 1;
    var v = <T>a;
             ~
!!! error TS2304: Cannot find name 'T'.
               ~
!!! error TS2304: Cannot find name 'a'.
    
    var v = <T>(a) => 1;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'v' must be of type '<T>() => number', but here has type '<T>(a: any) => number'.
    var v = <T>(a, b) => 1;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'v' must be of type '<T>() => number', but here has type '<T>(a: any, b: any) => number'.
    var v = <T>(a = 1, b = 2) => 1;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'v' must be of type '<T>() => number', but here has type '<T>(a?: number, b?: number) => number'.
    
    var v = <T>(a);
             ~
!!! error TS2304: Cannot find name 'T'.
                ~
!!! error TS2304: Cannot find name 'a'.
    var v = <T>(a, b);
             ~
!!! error TS2304: Cannot find name 'T'.
                ~
!!! error TS2304: Cannot find name 'a'.
                   ~
!!! error TS2304: Cannot find name 'b'.
    var v = <T>(a = 1, b = 2);
             ~
!!! error TS2304: Cannot find name 'T'.
                ~
!!! error TS2304: Cannot find name 'a'.
                       ~
!!! error TS2304: Cannot find name 'b'.